2006-01-25  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	Removed duplication.

2006-01-14 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs: Replaced
	'Combine' by 'Solution'.
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs:
	Replaced 'Combine' by 'Solution'.

2006-01-10 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	Track api changes.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Implemented BeginStepTask.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Added addin dependencies.
	* MonoDevelop.Projects.Gui/IconService.cs: Use the new addin API.

2005-10-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Install the assembly in the AddIns directory.

2005-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	Created new assembly. Old ChangeLog entries can be found in the
	MonoDevelop.Ide ChangeLog.