@@ -1,3 +1,8 @@
+2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>   
+
+	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
+	Use LanguageItemCollection instead of ArrayList.
+
 2006-01-25  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>
 
 	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
